@@ -221,6 +221,8 @@ Trunk (unreleased changes)
     HDFS-1703. Improve start/stop scripts and add decommission tool for
     federation. (Tanping Wang, Erik Steffl via suresh)
 
+   HDFS-1754. Federation: testFsck fails. (boryas)
+
   IMPROVEMENTS
 
     HDFS-1510. Added test-patch.properties required by test-patch.sh (nigel)
